<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b8860b"
    tools:context=".activity.ShowElementActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_sx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_dx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9375" />

    <TextView
        android:id="@+id/tv_ID"
        android:layout_width="41dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/id"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline_sx"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_todo_ID"
        android:layout_width="95dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/id_value"
        app:layout_constraintEnd_toStartOf="@+id/iv_thumbnail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_ID"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="61dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_ID"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="@+id/guideline_sx"
        app:layout_constraintTop_toBottomOf="@+id/tv_ID" />

    <TextView
        android:id="@+id/tv_todo_name"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_value"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintEnd_toStartOf="@+id/iv_thumbnail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_todo_ID" />

    <TextView
        android:id="@+id/tv_uriORlastname"
        android:layout_width="90dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/urlORlastname"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_sx"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_todo_urlORlastname"
        android:layout_width="223dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/urlORlastname_value"
        android:textAlignment="inherit"
        app:layout_constraintEnd_toStartOf="@+id/guideline_dx"
        app:layout_constraintStart_toEndOf="@+id/tv_uriORlastname"
        app:layout_constraintTop_toBottomOf="@+id/iv_thumbnail" />

    <TextView
        android:id="@+id/tv_descriptionORsuffix"
        android:layout_width="149dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/descriptionORsuffix"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_uriORlastname"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="@+id/guideline_sx"
        app:layout_constraintTop_toBottomOf="@+id/tv_uriORlastname" />

    <TextView
        android:id="@+id/tv_todo_descriptionORsuffix"
        android:layout_width="311dp"
        android:layout_height="84dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/descriptionORsuffix"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toStartOf="@+id/guideline_dx"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_sx"
        app:layout_constraintTop_toBottomOf="@+id/tv_descriptionORsuffix"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_thumbnail"
        android:layout_width="101dp"
        android:layout_height="95dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/thumbnail"
        android:src="@android:drawable/star_big_on"
        app:layout_constraintEnd_toStartOf="@+id/guideline_dx"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="@+id/guideline_sx"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="354dp"
        android:layout_height="143dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="266dp">

            <TableLayout
                android:id="@+id/comics"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_comics"
                    android:layout_width="368dp"

                    android:layout_height="wrap_content"
                    android:background="#b22222"
                    android:text="@string/comics"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="531dp" />

                <TableRow
                    android:id="@+id/nameComic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#bebebe">

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="18dp" />

                    <TextView
                        android:id="@+id/tv_nameComics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#bebebe"
                        android:text="@string/name"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="18dp" />

                    <TextView
                        android:id="@+id/tv_todo_nameComic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                </TableRow>

            </TableLayout>

            <TableLayout
                android:id="@+id/events"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#b8860b">

                <TextView
                    android:id="@+id/tv_Events"
                    android:layout_width="368dp"

                    android:layout_height="wrap_content"
                    android:background="#b22222"
                    android:text="@string/elements"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="531dp" />


                <TableRow
                    android:id="@+id/nameEvent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#bebebe">

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="18dp" />

                    <TextView
                        android:id="@+id/tv_nameElementEvents"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#bebebe"
                        android:text="@string/name"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="18dp" />

                    <TextView
                        android:id="@+id/tv_todo_nameEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                </TableRow>

            </TableLayout>

            <TableLayout
                android:id="@+id/stories"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_stories"
                    android:layout_width="368dp"

                    android:layout_height="wrap_content"
                    android:background="#b22222"
                    android:text="@string/stories"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="531dp" />


                <TableRow
                    android:id="@+id/nameStory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#bebebe">

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="18dp" />

                    <TextView
                        android:id="@+id/tv_nameStories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#bebebe"
                        android:text="@string/name"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="18dp" />

                    <TextView
                        android:id="@+id/tv_todo_nameStory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAgain"
        android:layout_width="137dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/again"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_sx"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <Button
        android:id="@+id/btnExitFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/exit"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_dx"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toEndOf="@+id/btnAgain"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>