<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uniroma2.mobynet.marvel_androidproject.activity_welcome">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_Sx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="35dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_Dx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="34dp" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="307dp"
        android:layout_height="104dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#CC0000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Dx"
        app:layout_constraintStart_toStartOf="@+id/guideline_Sx"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="310dp"
        android:layout_height="190dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/instruction"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Dx"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/guideline_Sx"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="112dp"
        android:layout_height="66dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Dx"
        app:layout_constraintStart_toStartOf="@+id/guideline_Sx"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

</android.support.constraint.ConstraintLayout>
